@@ -366,7 +366,7 @@ ETCL_Literal_Constraint::operator/ (const ETCL_Literal_Constraint & rhs)
     case ACE_ETCL_DOUBLE:
       {
         if ((ACE_CDR::Double) rhs == 0.0)
-	  return ETCL_Literal_Constraint ((ACE_CDR::Double) 0.0);
+          return ETCL_Literal_Constraint ((ACE_CDR::Double) 0.0);
         
         ACE_CDR::Double result = (ACE_CDR::Double) *this / (ACE_CDR::Double) rhs;
         return ETCL_Literal_Constraint ((ACE_CDR::Double) result);
@@ -375,7 +375,7 @@ ETCL_Literal_Constraint::operator/ (const ETCL_Literal_Constraint & rhs)
     case ACE_ETCL_SIGNED:
       {
         if ((ACE_CDR::Long) rhs == 0)
-	  return ETCL_Literal_Constraint ((ACE_CDR::Long) 0);
+          return ETCL_Literal_Constraint ((ACE_CDR::Long) 0);
 
         ACE_CDR::Long result = (ACE_CDR::Long) *this / (ACE_CDR::Long) rhs;
         return ETCL_Literal_Constraint ((ACE_CDR::Long) result);
@@ -383,7 +383,7 @@ ETCL_Literal_Constraint::operator/ (const ETCL_Literal_Constraint & rhs)
     case ACE_ETCL_UNSIGNED:
       {
         if ((ACE_CDR::ULong) rhs == 0)
-	  return ETCL_Literal_Constraint ((ACE_CDR::ULong) 0);
+          return ETCL_Literal_Constraint ((ACE_CDR::ULong) 0);
 
         ACE_CDR::ULong result = (ACE_CDR::ULong) *this / (ACE_CDR::ULong) rhs;
         return ETCL_Literal_Constraint ((ACE_CDR::ULong) result);
