@@ -1,3 +1,9 @@
+Mon Sep 22 14:54:36 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>
+
+        * ace/ETCL/ETCL_Constraint.cpp:
+
+          Fix fuzz errors.
+
 Mon Sep 22 13:17:19 UTC 2008  Simon McQueen  <sm@prismtech.com>
 
         * tests/Bug_2980_Regression_Test.cpp:
